--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
 
     display: flex;
     justify-content: center;
+    
+    font-size: 16px;
+}
+
+input[type="text"] {
+  font-size: inherit;
 }
 
 #app {
