--- a/style.css
+++ b/style.css
@@ -82,9 +82,10 @@ body {
   outline: none;
   border: none;
   padding: 20px 0;
-  font-weight: 600;
+  font-weight: 500;
   border-radius: 10px;
   width: 1000px;
+  color: grey;
 
   box-shadow: 1px 1px 5px rgb(255,255,255,0.5);
 }
