--- a/style.css
+++ b/style.css
@@ -110,8 +110,18 @@ body {
 #todos {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  align-items: center;
+  text-align: left;
   color: white;
+}
+
+.delete {
+  border: none;
+  padding: 5px 10px;
+  background: none;
+  color: white;
+  outline: none;
+  font-size: 20px;
 }
 
 .todo {
@@ -119,6 +129,10 @@ body {
   margin: 5px 0;
   font-size: 20px;
   font-weight: 600;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .completed { 
