--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .bg {
   animation:slide 3s ease-in-out infinite alternate;
   /* background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%); */
-  background-image: linear-gradient(-60deg, #000 50%, #212529 50%);
+  background-image: linear-gradient(-60deg, #153b3d 50%, #3c6e71 50%);
   bottom:0;
   left:-50%;
   opacity:.5;
@@ -94,25 +94,36 @@ body {
   font-weight: 500;
   border-radius: 10px;
   width: 1000px;
-  color: grey;
+  color: black;
 
   box-shadow: 1px 1px 5px rgb(0,0,0,0.5);
+}
+
+#actions {
+  margin: 15px 0;
+}
+
+.action {
+  padding: 15px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
 }
 
 #add {
   border: none;
-  border-radius: 10px;
+  border-radius: 20px;
   font-size: 20px;
   font-weight: 500;
-  padding: 10px 20px;
+  padding: 10px 10px;
   outline: none;
-  background: white;
+  background: rgb(0,0,0,0);
   color: grey;
-  box-shadow: 1px 1px 5px rgb(0,0,0,0.5);
+  /* box-shadow: 1px 1px 5px rgb(0,0,0,0.5); */
 }
 
 #add:hover {
-  background: black;
+  background: rgb(0,0,0,0.1);
   color: white;
 }
 
@@ -155,7 +166,8 @@ body {
 }
 
 .completed { 
-  background: #006400;
+  background: rgb(255,255,255,0.1);
+  color: rgb(255,255,255,0.2);
 }
 
 #octicon {
@@ -253,3 +265,69 @@ body {
 }
 
 /* /RESPONSIVE */
+
+
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #000;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #000;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
